--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: workflow
+name: build
 
 on:
   push:
@@ -37,7 +37,6 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
-
   codecov:
     runs-on: ubuntu-latest
 
