--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+requests~=2.27.1
+typing-extensions~=4.0.1
+
 pytest~=6.2.5
 ecdsa~=0.17.0
-requests~=2.27.1
+
+pytest-codecov~=0.4.0
+build~=0.7.0
+twine~=3.7.1
