--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ project_urls =
 classifiers =
     Intended Audience :: Developers
     Intended Audience :: End Users/Desktop
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -29,9 +30,10 @@ keywords =
     wallet
 
 [options]
-python_requires = >=3.8
+python_requires = >=3.7
 install_requires =
     requests
+    typing-extensions
 tests_require =
     pytest
     ecdsa
