--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ python_requires = >=3.7
 install_requires =
     requests
     typing-extensions
+    pycryptodomex
 tests_require =
     pytest
     ecdsa
