--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  METASV_TOKEN: ${{ secrets.METASV_TOKEN }}
+
 jobs:
   package:
     runs-on: ubuntu-latest
