--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ keywords =
 
 [options]
 python_requires = >=3.7
+include_package_data = True
 install_requires =
     requests
     typing-extensions
@@ -39,3 +40,6 @@ install_requires =
 tests_require =
     pytest
     ecdsa
+
+[options.package_data]
+* = hd/wordlist/*.txt
