--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-requests~=2.27.1
-typing-extensions~=4.0.1
-pycryptodomex~=3.12.0
+requests==2.28.1
+typing-extensions==4.4.0
+pycryptodomex==3.15.0
 coincurve~=17.0.0
 
-pytest~=6.2.5
-ecdsa~=0.17.0
+pytest==7.2.0
+ecdsa==0.18.0
 
-pytest-codecov~=0.4.0
-build~=0.7.0
-twine~=3.7.1
+pytest-codecov==0.5.0
+build==0.9.0
+twine==4.0.1
