--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 requests==2.28.1
 typing-extensions==4.4.0
 pycryptodomex==3.15.0
-coincurve~=17.0.0
+coincurve==18.0.0
 
 pytest==7.2.0
 ecdsa==0.18.0
